Implementations 1. Initialized and Created Local DB 2. Integrated the API to get Data of 20 cities 3. Stored the cityies details in the local DB

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WeatherForecast</string>
+    <string name="api_key">2c5465b5b48db0dce2f48958dc343b56</string>
+    <string name="group_api_key_txt">appid=</string>
+    <string name="api_end_point_several_cities">http://api.openweathermap.org/data/2.5/group?id=</string>
 </resources>
