--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,17 @@
     <string name="api_key">2c5465b5b48db0dce2f48958dc343b56</string>
     <string name="group_api_key_txt">appid=</string>
     <string name="api_end_point_several_cities">http://api.openweathermap.org/data/2.5/group?id=</string>
+    <string name="title_activity_city_listing_screen">CityListingScreen</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+    <string name="nav_header_title">Weather Forecasting</string>
+    <string name="nav_header_subtitle">android.studio@android.com</string>
+    <string name="nav_header_desc">Navigation header</string>
+    <string name="action_settings">Settings</string>
+
+    <string name="top_cities">Top Cities</string>
+    <string name="nav_menu_weather">Weather</string>
+    <string name="nav_close_app">Exit</string>
+
+    <string name="allow_permission_message">To populate your current city weather forecast, we need your location access. However, if you do not want to allow us to access your device location. Then, by clicking Enter City button, you can add your city manually to access your current location.</string>
 </resources>
