--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,8 +18,9 @@
     <string name="nav_menu_weather">Weather</string>
     <string name="nav_close_app">Exit</string>
     <string name="permission_text">Access Permission</string>
-    <string name="allow_permission_message">To populate your current city weather forecast, we need your location access. However, if you do not want to allow us to access your device location. Then, by clicking Enter City button, you can add your city manually to access your current location weather forecast.</string>
+    <string name="allow_permission_message">To populate your current city weather forecast, we need your location access. However, You can access other cities weather, by searching in the top search bar.</string>
     <string name="showing_weather">Showing Weather Forecast for</string>
     <string name="no_internet_message">It seems like you are not connected to the internet. Please get connected and try again. For now, You will be displayed with older data.</string>
     <string name="no_internet_message_title">No Connection</string>
+    <string name="locate">Locate</string>
 </resources>
